pkg/front_end/testcases/null_aware_elements/constant_null_aware_map_entry_shorting_erroneous.dart.strong.expect
library;
//
// Problems in library:
//
// pkg/front_end/testcases/null_aware_elements/constant_null_aware_map_entry_shorting_erroneous.dart:6:59: Error: A value of type 'double' can't be assigned to a variable of type 'int'.
// const Map<String, int> mapLiteral = <String, int>{?key: 1 / 0}; // Compile-time error: since the key is not null, the value is evaluated and causes a compile-time error.
//                                                           ^
//
import self as self;
import "dart:core" as core;

static const field core::String? key = #C1;
static const field core::Map<core::String, core::int> mapLiteral = invalid-expression "pkg/front_end/testcases/null_aware_elements/constant_null_aware_map_entry_shorting_erroneous.dart:6:59: Error: A value of type 'double' can't be assigned to a variable of type 'int'.
const Map<String, int> mapLiteral = <String, int>{?key: 1 / 0}; // Compile-time error: since the key is not null, the value is evaluated and causes a compile-time error.
                                                          ^";

constants  {
  #C1 = "key"
}
